@@ -1,11 +1,0 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope">
-
-  <!-- Default wrapper for indexing IContentish objects -->
-  <adapter
-      for="Products.CMFCore.interfaces.IContentish
-           Products.CMFCore.interfaces.ICatalogTool"
-      provides="Products.CMFCore.interfaces.IIndexableObjectWrapper"
-      factory="Products.CMFCore.CatalogTool.IndexableObjectWrapper" />
-
-</configure>
