@@ -4,8 +4,9 @@ Products.CMFCore Changelog
 2.2.0 (unreleased)
 ------------------
 
-- PortalCatalog: Changed to use a multi-adaptor to allow pluggable
-  IndexableObjectWrapper class.  The change will assist in integrating with
+- PortalCatalog: Changed to use a multi-adaptor to allow a pluggable
+  IndexableObjectWrapper class.  Objects that implement IIndexableObject
+  are not wrapped.  The change will assist in integrating with
   other indexing strategies from third-party packages.
 
 - Events: Changed 'handleContentishEvent' behavior for IObjectCopiedEvent.
